--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "react application starting",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start" : "node server.js" 
   },
   "author": "gurjit singh mehta",
   "license": "MIT",
